tests-integration/tests/roundtrip/native-errors/semantic-errors/type-mismatch/type-mismatch.eprime.disabled
letting y be false 
find x: int (5..10)
such that 5 + y = 6